--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style/reset.css">
     <link rel="stylesheet" href="./assets/style/style.css">
     <script src="./assets/script/script.js"></script>
-    <title>Document</title>
+    <title>Daję Słowo!</title>
 </head>
 <body>
     <p>Lorem, ipsum dolor.</p>
