--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/reset.css">
     <link rel="stylesheet" href="./assets/style/style.css">
-    <script src="./assets/script/script.js"></script>
     <title>Daję Słowo!</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor.</p>
+    <div id="app">
+        
+    </div>
+    <script src="./assets/script/script.js"></script>
 </body>
 </html>
